--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h4{
     width: 17%;
     height: 17%;
     float: left;
-    margin: 0 1.8rem 0 1.8rem;
+    margin: 0 1.8rem 0 0;
 }
 
 .top-container{
@@ -102,7 +102,7 @@ h4{
 }
 .skill-row3{
     width: 50%;
-    margin: 2rem auto 6.25rem auto;
+    margin: auto auto 6.25rem auto;
     text-align: left;
     line-height: 2;
 }
