--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ h4{
     background-color: #EAF6F6;
     position: relative;
     padding-top: 15%;
+    background-image: url(27740016.jpg);
 }
 
 .cloud1{
